fablix-multi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fablix-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fablix-redis
  template:
    metadata:
      labels:
        app: fablix-redis
    spec:
      containers:
        - name: fablix-redis-container
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: fablix-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fablix-movies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fablix-movies
  template:
    metadata:
      labels:
        app: fablix-movies
    spec:
      containers:
        - name: fablix-movies-container
          image: kppham/cs122b-5-fablix-movies:v1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fablix-movies-service
spec:
  selector:
    app: fablix-movies
  ports:
    - name: http
      port: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fablix-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fablix-login
  template:
    metadata:
      labels:
        app: fablix-login
    spec:
      containers:
        - name: fablix-login-container
          image: kppham/cs122b-5-fablix-login:v1
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fablix-login-service
spec:
  selector:
    app: murphy-login
  ports:
    - name: http
      port: 8080
  type: ClusterIP
