ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: fablix-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cs122b/api/customers/login
            pathType: Exact
            backend:
              service:
                name: fablix-login-service
                port:
                  number: 8080
          - path: /cs122b/api/employees/login
            pathType: Exact
            backend:
              service:
                name: fablix-login-service
                port:
                  number: 8080
          - path: /cs122b/login.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fablix-login-service
                port:
                  number: 8080
          - path: /cs122b/_dashboard/login.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fablix-login-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fablix-movies-service
                port:
                  number: 8080
